  pixels from the edges of an axis (ie. n from the start and from the
  end) -- as requested in Trac ticket #5.

* Fixed bug (Trac ticket #4) that meant the velocity units were not
  correctly dealt with. Duchamp should be more robust for different
  velocity axis setups now.

* Fixed bug (ticket #9) with the VOTable output, where the tags were
  not closing.

* Fixed minor bug in calculating the flux threshold from the p-value
  threshold when the FDR method is used. This did not affect the
  actual thresholding, merely the quoted flux threshold in the results
  file. Also, the MW channels are kept out of the p-value threshold
  determination if they are being flagged.

* Fallback spectral units (in case the FITS header fails to record
  them) changed to SPC.

* Some slight improvements to the user feedback during execution.

* Changed the default value of the reconDim parameter from 3 to 1, and
  the default value of the flagATrous parameter to false.

Duchamp version 1.0.7 (2006/11/22)
----------------------------------

One new feature, and some improvements and bug-fixes.

* The user can now elect to Hanning-smooth the spectral direction of
  the cube before the searching is done. This can be done instead of the
  wavelet reconstruction (although if both are selected, the
  reconstruction takes precendence). This functionality is switched on
  and off by the flagSmooth parameter, and the width of the Hanning
  kernel is governed by the hanningWidth parameter.

* The smoothed array can also be written to a FITS file and read in at
  the start in the same manner as the reconstructed array.

* Several improvements have been made to the memory
  management. Several memory leaks were fixed, and the memory usage of
  Duchamp is considerably less, which will be a help for running it on
  large cubes. The speed of some routines has also been improved, by
  removing unnecessarily repetitive loops.
