@@ -113,6 +113,18 @@ get going quickly, just replace the \texttt{"your-file-here"} in the
 }
 \end{quote}
 
+To disable the use of X-window plotting (in displaying the map of
+detections), one can either set the parameter
+\texttt{flagXOutput=false} or use the \texttt{-x} command-line option: 
+\begin{quote}
+{\footnotesize
+\texttt{> Duchamp -x -p [parameter file]}
+}, or\\
+{\footnotesize
+\texttt{> Duchamp -x -f [FITS file]}
+}
+\end{quote}
+
 The following appendices provide details on the individual parameters,
 and show examples of the output files that \duchamp produces.
 
