@@ -88,8 +88,10 @@ not matter, they are grouped here in logical sections.
   the number of channels spanned by each pixel. Also shows pixel and
   WCS coordinates.
 \item[flagXOutput \texttt{[true]}] A flag to say whether to display a
-  0th moment map in a PGPlot Xwindow. This will be in addition to any
-  that are saved to a file.
+  0th moment map in a PGPlot X-window. This will be in addition to any
+  that are saved to a file. This parameter can be overridden by the
+  use of the \texttt{-x} command-line option, which disables the
+  X-windows output.
 \end{entry}
 
 \secB*{Modifying the cube}
