@@ -21,6 +21,8 @@ Duchamp is an object finder for spectral-line FITS cubes.\n\
 \n\
   -p FILE      Read in parameters from FILE, including FITS image location.\n\
   -f FILE      Use default parameters with imageFile=FILE\n\
+  -x           Do not use X-windows PGPLOT output\n\
+               (equivalent to setting flagXOutput=false -- overrides the parameter file)\n\n\
   -v           Return version number and exit\n\
   -h           Display this help information and exit\n";
 
